meta-qti-bsp:Export libsync headers.
Change-Id: If23a00ca670c506284f46af97eb92c0b7044a11b

--- a/recipes-devtools/libsync/libsync/Makefile.am
+++ b/recipes-devtools/libsync/libsync/Makefile.am
@@ -23,6 +23,10 @@ endif
 # Export headers
 sync_includedir=$(includedir)/sync
 sync_include_HEADERS := $(top_srcdir)/include/sync/sync.h
+ndk_includedir=$(includedir)/ndk
+ndk_include_HEADERS := $(top_srcdir)/include/ndk/sync.h
+android_includedir=$(includedir)/android
+android_include_HEADERS := $(top_srcdir)/include/android/sync.h
 
 pkgconfigdir := $(libdir)/pkgconfig
 pkgconfig_DATA := libsync.pc
