selinux: Move sdxpoorwills to enforcing mode
Move sdxpoorwills from permissive to enforcing mode

Change-Id: I61cb068051fa33791196705733ed6315ba4f24b8

--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -16,4 +16,4 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'co
 
 DISTRO_FEATURES += " selinux"
 DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
