meta-qti-bsp: targeted robot-som as base of all robot variants
Change-Id: Icfb246db68261cf3727927c0e4aa2cd749beaafc

--- a/conf/distro/robot-som.conf
+++ b/conf/distro/robot-som.conf
@@ -1,4 +1,4 @@
-BASEDISTRO ?= "robot"
+BASEDISTRO ?= "msm"
 require conf/distro/msm.conf
 DISTRO_NAME = "robot-som"
 DISTROOVERRIDES =. "robot-som:"
