--- a/conf/distro/robot-som-ros.conf
+++ b/conf/distro/robot-som-ros.conf
@@ -1,6 +1,6 @@
 
-BASEDISTRO ?= "robot"
-require conf/distro/msm.conf
+BASEDISTRO ?= "robot-som"
+require conf/distro/robot-som.conf
 DISTRO_NAME = "robot-som-ros"
 DISTROOVERRIDES =. "robot-som-ros:"
 
@@ -19,10 +19,4 @@ KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=
 PREFERRED_VERSION_linux-msm = "4.9"
 
 SERIAL_CONSOLE = "115200 ttyMSM0"
-
-# enable audio as a loadable kernel module
-DISTRO_FEATURES_append = " audio-dlkm"
-
-DISTRO_FEATURES_append = " ab-boot-support"
-
 
