qcs605: selinux mode change from permissive to enforcing
Change-Id: Ifd6422686b4e95c0217fd7ee3b932f1905e67cbe

--- a/conf/machine/qcs605-64.conf
+++ b/conf/machine/qcs605-64.conf
@@ -29,7 +29,7 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 
 #enable selinux
 DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
 
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
