meta-qti-bsp: qcs605: rename bluetooth mount to bt_firmware
Change mount partition directory to bt_firmware instead of bluetooth

Change-Id: I5346595b8d781dc8775ec0b069f81490a8725a55

--- a/recipes-core/base-files/base-files-3.0.14/systemd/bluetooth-mount.service
+++ b/recipes-core/base-files/base-files-3.0.14/systemd/bluetooth-mount.service
@@ -26,12 +26,12 @@
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE
 
 [Unit]
-Description=Mount bluetooth partition to /bluetooth mount point
+Description=Mount bluetooth partition to /bt_firmware mount point
 SourcePath=/etc/initscripts/ab_mount.sh
 
 [Service]
 Restart=on-failure
-ExecStart=/etc/initscripts/ab_mount.sh "noexec,nodev,ro,context=system_u:object_r:firmware_t:s0" vfat /dev/disk/by-partlabel/bluetooth /bluetooth
+ExecStart=/etc/initscripts/ab_mount.sh "noexec,nodev,ro,context=system_u:object_r:firmware_t:s0" vfat /dev/disk/by-partlabel/bluetooth /bt_firmware
 
 [Install]
 WantedBy=local-fs.target
