meta-qti-bsp: qcs405-som1.conf: selinux enablement for qcs405
- This changes will bring selinux enable under permissive mode.

Change-Id: I664fb64b7fb1419db08c35bb9f21fd9ec9514aea

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -15,6 +15,10 @@ CACHE_SIZE_EXT4 ?= "80000000"
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
 
+#enable selinux
+DISTRO_FEATURES_append = " selinux"
+DEFAULT_ENFORCING = "permissive"
+
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ext4"
 RECOVERY_IMAGE = "0"
