meta-qti-bsp: qcs405-som1.conf: selinux enablement for qcs405
- This changes will bring selinux enable under enforcing mode.

Change-Id: Ida9871669d90151d4e61c5f81bfd0fb9bae21ee0

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -17,7 +17,7 @@ DISTRO_FEATURES_append = " audio-dlkm"
 
 #enable selinux
 DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
 
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ext4"
