sdxprairie: Enable selinux in permissive mode
Enable selinux in permissive mode for sdxprairie

Change-Id: I8b786e9c27700e58e6789ad3589df0451fca8617

--- a/conf/machine/sdxprairie.conf
+++ b/conf/machine/sdxprairie.conf
@@ -18,3 +18,7 @@ LLVM_VERSION = "6.0"
 
 #Enable audio kernel
 DISTRO_FEATURES += "audiodlkm audio-dlkm"
+
+DISTRO_FEATURES_append += " selinux"
+DISTRO_FEATURES_FILTER_NATIVE += " selinux"
+DEFAULT_ENFORCING = "permissive"
