Set TARGET_VENDOR as "-oe" for mutlilib packages.
Change-Id: Ie44757c625decdb9110e11ec4eea16baaa25ade8

--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -50,3 +50,4 @@ IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs','
 require conf/multilib.conf
 MULTILIBS = "multilib:lib64"
 DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
+TARGET_VENDOR_virtclass-multilib-lib64="-oe"
