--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -21,6 +21,9 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'co
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
+# Generate persist image
+DISTRO_FEATURES += "persist-image"
+
 # Use systemd init manager.
 DISTRO_FEATURES_remove = "sysvinit"
 DISTRO_FEATURES_append = " systemd"
