--- a/conf/machine/qcs605-64.conf
+++ b/conf/machine/qcs605-64.conf
@@ -20,6 +20,9 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'co
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
+# Generate persist image
+DISTRO_FEATURES += "persist-image"
+
 # Use systemd init manager.
 DISTRO_FEATURES_remove = "sysvinit"
 DISTRO_FEATURES_append = " systemd"
@@ -47,5 +50,5 @@ IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs','
 # the armv7a tuning (32 bit) instead of 64 bit aarch.
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
-DEFAULTTUNE_virtclass-multilib-lib32 = "armv7a-neon"
+DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
 TARGET_VENDOR_virtclass-multilib-lib32="-oe"
