qcs605-64: Switch to softfp for 32bit multilib packages
Change-Id: I40e8290f4c086d86d733263a1cdb4426db1d01af

--- a/conf/machine/qcs605-64.conf
+++ b/conf/machine/qcs605-64.conf
@@ -47,5 +47,5 @@ IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs','
 # the armv7a tuning (32 bit) instead of 64 bit aarch.
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
-DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
+DEFAULTTUNE_virtclass-multilib-lib32 = "armv7a-neon"
 TARGET_VENDOR_virtclass-multilib-lib32="-oe"
