meta-qti-bsp:qcs605: Add Fsconfig for userspace hardening
Add fsconfig for qcs605
change initscripts and udev scripts other permissions
Make service manager run as User="system"

Change-Id: I3828e1e9390599e2a1b36bb714d53f7c55290288

--- a/recipes-bsp/binder/files/servicemanager.service
+++ b/recipes-bsp/binder/files/servicemanager.service
@@ -30,6 +30,8 @@ Description= Service manager Service
 SourcePath=/usr/bin/servicemanager
 
 [Service]
+User=system
+Group=system
 Restart=always
 ExecStart=/usr/bin/servicemanager
 
