--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -17,3 +17,4 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'co
 DISTRO_FEATURES += " selinux"
 DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
 DEFAULT_ENFORCING = "enforcing"
+RECOVERY_IMAGE ?= "1"
