Define mount points in conf files
Define mount points in machine conf files instead of base-files
recipe. This change gives flexibility to override mount points
for derived machines. This also provides information to other
recipes for making decisions based on available mount points.

Change-Id: I53c4179b6436c7329d336f46f09aeb8babbc16d5

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -12,6 +12,8 @@ BB_SIGNATURE_HANDLER = "noop"
 DISTRO = "qsap"
 DEFAULTTUNE = "aarch64"
 
+MACHINE_MNT_POINTS = "/firmware /persist /dsp /bt_firmware"
+
 # Sizes for EXT4 (in bytes)
 SYSTEM_SIZE_EXT4 ?= "${@bb.utils.contains('DEBUG_BUILD', '1', '5368709120', '681574400', d)}"
 SYSTEMRW_SIZE_EXT4 ?= "8388608"
