--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -16,6 +16,9 @@ EXTRA_IMAGECMD ?= "-N 2048"
 UBINIZE_ARGS ?= "-m 4096 -p 256KiB -s 4096"
 #MKUBIFS Args
 MKUBIFS_ARGS ?= "-m 4096 -e 253952 -c 2146 -F"
+
+MACHINE_MNT_POINTS = "/firmware /cache /dsp /bt_firmware"
+
 #Volume sizes
 SYSTEM_VOLUME_SIZE ?= "150MiB"
 CACHE_VOLUME_SIZE ?= "20MiB"
