--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -63,3 +63,5 @@ TARGET_CXXFLAGS += " -DTARGET_ION_ABI_VERSION=2"
 PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
+
+MACHINE_MNT_POINTS = "/firmware /persist /cache /dsp /bt_firmware"
