Prevent busybox from providing brctl and readprofile as alternatives
virtualization feature desires brctl from bridge-utils and readprofile
from util-linux. This change removes /sbin/brctl and /sbin/readprofile
from busybox.links and  conditionally prevents busybox from symlinking
to these binaries to busybox as alternatives in the update-alternatives
class.

Change-Id: I97ac657e05dd8bfcef08be81263db64dc6cd7988

--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -24,6 +24,9 @@ DISTRO_FEATURES_append = " ro-rootfs"
 # Generate persist image
 DISTRO_FEATURES += "persist-image"
 
+#Enable virtualization support on LE platform
+#DISTRO_FEATURES_append = " virtualization"
+
 # Use systemd init manager.
 DISTRO_FEATURES_remove = "sysvinit"
 DISTRO_FEATURES_append = " systemd"
