meta-qti-bsp:Enable persist volume for qcs403-som2.
-Enable persist Volume generation for qcs403-som2.
-Enable mounting of persist volume in qcs403-som2.

Change-Id: Iafbcaf3aac4fb66853ada3a310968a7a67330550

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -18,15 +18,15 @@ MKUBIFS_ARGS ?= "-m 4096 -e 253952 -c 2146 -F"
 SYSTEM_VOLUME_SIZE ?= "150MiB"
 CACHE_VOLUME_SIZE ?= "20MiB"
 SYSTEMRW_VOLUME_SIZE ?= "6MiB"
-
+PERSIST_VOLUME_SIZE ?= "12MiB"
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ubi"
 
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
-
+DISTRO_FEATURES_append = " persist-volume"
 DEFAULTTUNE = "armv7ahf-neon"
-
+MKUBIFS_PERSIST_ARGS = "-m 4096 -e 253952 -c 2146 -F"
 RECOVERY_IMAGE = "0"
 
 KERNEL_IMAGETYPE = "zImage-dtb"
