Revert "sdxpoorwills: Disable recovery image generation"
This reverts commit 14e21a2db03b37fb2d21a0856eb3709819c37396.

Change-Id: Iadd30a645405fe6dabdf8a8bad0509ce616901ab

--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -19,4 +19,4 @@ DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
 # Enable recovery image generation.
-# RECOVERY_IMAGE ?= "1"
+RECOVERY_IMAGE ?= "1"
