meta-qti-bsp:qcs405: Add fsconfig for qcs405
adding base fsconfig for file permission changes at buildtime
Adds QPERMISSIONS_ENABLE and USERADDEXTENSTION

Change-Id: I163963ed19cea6c65284c4acf706cbe901309fc8

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -40,3 +40,9 @@ PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
 
+# Flag to Enable QPermissions
+QPERMISSIONS_ENABLE = "1"
+
+QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
+QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
+QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
