--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -36,3 +36,10 @@ PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
 
 DISTRO_FEATURES += "ab-boot-support"
+
+# Flag to Enable QPermissions
+QPERMISSIONS_ENABLE = "1"
+
+QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
+QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
+QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
