--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -60,3 +60,10 @@ require conf/multilib.conf
 MULTILIBS = "multilib:lib64"
 DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
 TARGET_VENDOR_virtclass-multilib-lib64="-oe"
+
+# Flag to Enable QPermissions
+QPERMISSIONS_ENABLE = "1"
+
+QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
+QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
+QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
