--- a/conf/machine/qcs605-64.conf
+++ b/conf/machine/qcs605-64.conf
@@ -55,3 +55,10 @@ require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
 TARGET_VENDOR_virtclass-multilib-lib32="-oe"
+
+# Flag to Enable QPermissions
+QPERMISSIONS_ENABLE = "1"
+
+QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
+QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
+QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
