--- a/conf/distro/concam.conf
+++ b/conf/distro/concam.conf
@@ -5,4 +5,6 @@ require conf/distro/msm.conf
 DISTRO_NAME = "concam"
 DISTROOVERRIDES =. "concam:"
 
+#Enable verity feature
+DISTRO_FEATURES += "dm-verity"
 PRODUCT ?= "concam"
