Add opengl and set the backend for WPE webkit
Change-Id: Id8b475d316d89c2ed2a7cffe9d2b85ffe3664167

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -46,3 +46,5 @@ QPERMISSIONS_ENABLE = "1"
 QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
 QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
 QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
+
+PREFERRED_PROVIDER_virtual/wpebackend = "wpebackend-rdk"
