--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -2,9 +2,25 @@
 #@NAME: sdmsteppe
 #@DESCRIPTION: Machine configuration for QTI sdmsteppe 32bit
 
-require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic32.conf 
+require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic64.conf
 
 BASEMACHINE = "sdmsteppe"
 
-DEFAULTTUNE = "armv7ahf-neon"
+DEFAULTTUNE = "aarch64"
 
+PREFERRED_PROVIDER_virtual/kernel = "linux-msm"
+PREFERRED_VERSION_linux-msm = "4.14"
+KERNEL_DTS_NAME = "sm6150-qrd"
+KERNEL_BASE = "0x80000000"
+KERNEL_TAGS_OFFSET = "0x81E00000"
+KERNEL_IMAGETYPE = "Image.gz-dtb"
+KERNEL_CONFIG = "${@['vendor/sdmsteppe-perf_defconfig', 'vendor/sdmsteppe_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+
+require conf/multilib.conf
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
+TARGET_VENDOR_virtclass-multilib-lib32="-oe"
+
+# Userspace needs below given macro to support libion after kernel 4.12.
+TARGET_CFLAGS += " -DTARGET_ION_ABI_VERSION=2"
+TARGET_CXXFLAGS += " -DTARGET_ION_ABI_VERSION=2"
