--- a/conf/machine/sdxprairie.conf
+++ b/conf/machine/sdxprairie.conf
@@ -15,3 +15,6 @@ KERNEL_CMD_PARAMS = "noinitrd ro rootwait console=ttyMSM0,115200,n8 androidboot.
 KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8 androidboot.console=ttyMSM0', '', d)}"
 
 LLVM_VERSION = "6.0"
+
+#Enable audio kernel
+DISTRO_FEATURES += "audiodlkm audio-dlkm"
