--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -21,6 +21,10 @@ MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
 TARGET_VENDOR_virtclass-multilib-lib32="-oe"
 
+#enable selinux
+DISTRO_FEATURES_append = " selinux"
+DEFAULT_ENFORCING = "permissive"
+
 # Userspace needs below given macro to support libion after kernel 4.12.
 TARGET_CFLAGS += " -DTARGET_ION_ABI_VERSION=2"
 TARGET_CXXFLAGS += " -DTARGET_ION_ABI_VERSION=2"
