sdmsteppe: Compile kernel for TARGET_KERNEL_ARCH arch
Defined qtikernel-arch bbclass to aid kernel compilation
for an arch different from DEFAULTTUNE. Using this class
compiled sdmsteppe kernel for 64bit. Also adjust multilib
settings accordingly to provide 64bit toolchain.

Change-Id: I7aa49d2a7328adbeb8e3b52fce982d91813e0f6e

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -6,22 +6,27 @@ require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic64.conf
 
 BASEMACHINE = "sdmsteppe"
 
-DEFAULTTUNE = "aarch64"
+DEFAULTTUNE = "armv7ahf-neon"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-msm"
 PREFERRED_VERSION_linux-msm = "4.14"
+
+# Kernel to build for a different arch than default tune
+TARGET_KERNEL_ARCH = "aarch64"
+
 KERNEL_DTS_NAME = "sm6150-qrd"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x81E00000"
 KERNEL_IMAGETYPE = "Image.gz-dtb"
 KERNEL_CONFIG = "${@['vendor/sdmsteppe-perf_defconfig', 'vendor/sdmsteppe_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
+# Defined 64bit multilib environment to setup toolchain to compile 64bit kernel
 require conf/multilib.conf
-MULTILIBS = "multilib:lib32"
-DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
-TARGET_VENDOR_virtclass-multilib-lib32="-oe"
+MULTILIBS = "multilib:lib64"
+DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
+TARGET_VENDOR_virtclass-multilib-lib64="-oe"
 
-#enable selinux
+# Enable selinux
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "permissive"
 
