--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -46,3 +46,7 @@ IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs','
 # Userspace needs below given macro to support libion after kernel 4.12.
 TARGET_CFLAGS += " -DTARGET_ION_ABI_VERSION=2"
 TARGET_CXXFLAGS += " -DTARGET_ION_ABI_VERSION=2"
+
+PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
+PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
+PREFERRED_PROVIDER_virtual/egl      = "adreno"
