meta-qti-bsp: selinux enforcing for sdmsteppe
- Changing SELinux mode from permissive to enforcing.

Change-Id: I5d73e6905dea6c814c05d2be32af8c2bd6bc8464

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -31,7 +31,7 @@ TARGET_VENDOR_virtclass-multilib-lib64="-oe"
 
 # Enable selinux
 DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
 
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
