meta-qti-bsp: changes for thud
remove obsolete recipes
rename bbappends for upgraded recipes
enable obsolete rpc

Change-Id: Idc11da0a9c1c06c2ff711a064f19055a17092ddb

--- a/recipes-core/busybox/files/base.cfg
+++ b/recipes-core/busybox/files/base.cfg
@@ -14,7 +14,7 @@ CONFIG_BRCTL=y
 CONFIG_BZIP2=y
 CONFIG_CAL=y
 CONFIG_CATV=y
-CONFIG_CHAT=y
+#CONFIG_CHAT=y
 #CONFIG_CHPASSWD=y
 CONFIG_CHPST=y
 CONFIG_CHRT=y
@@ -331,7 +331,7 @@ CONFIG_SCRIPTREPLAY=y
 CONFIG_SENDMAIL=y
 CONFIG_SETARCH=y
 CONFIG_SETFONT=y
-CONFIG_SETKEYCODES=y
+#CONFIG_SETKEYCODES=y
 CONFIG_SETLOGCONS=y
 CONFIG_SETSID=y
 CONFIG_SETUIDGID=y
