--- a/recipes-core/busybox/files/no-console.cfg
+++ b/recipes-core/busybox/files/no-console.cfg
@@ -18,6 +18,6 @@ CONFIG_FEATURE_SETCONSOLE_LONG_OPTIONS=y
 CONFIG_SETFONT=y
 CONFIG_FEATURE_SETFONT_TEXTUAL_MAP=y
 CONFIG_DEFAULT_SETFONT_DIR=""
-CONFIG_SETKEYCODES=y
+#CONFIG_SETKEYCODES=y
 CONFIG_SETLOGCONS=y
 CONFIG_SHOWKEY=y
