--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,6 +3,7 @@ BBPATH .= ":${LAYERDIR}"
 BBFILE_COLLECTIONS += "msm"
 BBFILE_PRIORITY_msm = "10"
 BBFILE_PATTERN_msm := "^${LAYERDIR}/"
+LAYERSERIES_COMPAT_bsp = "thud"
 
 # Tools needed on the build host for usage within build tasks by recipes of this layer.
 HOSTTOOLS_NONFATAL += "xgettext msgmerge msgfmt gmsgfmt java zip"
