sdmsteppe: Enable read-only rootfs Image feature.
 * add ro-rootfs to DISTRO_FEATURES list.
 * Install extension to filesystem tree like /persist.
 * Install mount units to mount partitions at their
   respective mount points in the filesystem tree.

Change-Id: I93b5cd40321966c64a0e13f31ce1493d3fd1b5f2

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -2,7 +2,7 @@
 #@NAME: sdmsteppe
 #@DESCRIPTION: Machine configuration for QTI sdmsteppe 32bit
 
-require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic64.conf
+require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic32.conf
 
 BASEMACHINE = "sdmsteppe"
 
@@ -29,6 +29,13 @@ TARGET_VENDOR_virtclass-multilib-lib64="-oe"
 # Enable selinux
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "permissive"
+
+# readonly-rootfs
+DISTRO_FEATURES_append = " ro-rootfs"
+
+#Disable journalling for RO rootfs. Set the block size to 4096.
+IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
+
 
 # Userspace needs below given macro to support libion after kernel 4.12.
 TARGET_CFLAGS += " -DTARGET_ION_ABI_VERSION=2"
