Support a/b partition scheme for sdmsteppe
Added a/b partition scheme support and cleaned up image inc list

Change-Id: I8320ca22bca682d92a69d341c748e2e8c44bd300

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -33,6 +33,9 @@ DEFAULT_ENFORCING = "permissive"
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
+# Support A/B partition scheme
+DISTRO_FEATURES += "ab-boot-support"
+
 #Disable journalling for RO rootfs. Set the block size to 4096.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
 
