sdmsteppe: Update security flags
Change-Id: I31f0ff420b6f93a09ed16fc8e4928285c1022755

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -4,6 +4,9 @@
 
 require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic32.conf
 
+# Pull in security flags
+require ${COREBASE}/meta-qti-bsp/conf/distro/include/security_flags.inc
+
 BASEMACHINE = "sdmsteppe"
 
 DEFAULTTUNE = "armv7ahf-neon"
