--- a/conf/machine/sdm-generic32.conf
+++ b/conf/machine/sdm-generic32.conf
@@ -7,6 +7,8 @@ include conf/machine/include/soc-family.inc
 # pull in the arm machine definition
 require conf/machine/include/arm/arch-armv8.inc
 
+# Pull in security flags
+require ${COREBASE}/meta-qti-bsp/conf/distro/include/security_flags.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-dummy"
 
