meta-qti-bsp: Set selinux context for dsp
Sets selinux context for dsp partition.

Change-Id: Id4f36768ecd11769c9d88fdae706ef01ac3c9563
Signed-off-by: Mohammed Nayeem Ur Rahman <mohara@codeaurora.org>

--- a/recipes-core/base-files/base-files-3.0.14/systemd/dsp-mount.service
+++ b/recipes-core/base-files/base-files-3.0.14/systemd/dsp-mount.service
@@ -32,7 +32,7 @@ Description=Mount dsp partition to /dsp mount point
 Type=oneshot
 RemainAfterExit=yes
 PassEnvironment="SLOT_SUFFIX"
-ExecStart=/bin/mount -o relatime,data=ordered,noauto_da_alloc,discard,ro,noexec,nodev,nosuid -t ext4 /dev/disk/by-partlabel/dsp${SLOT_SUFFIX} /dsp
+ExecStart=/bin/mount -o relatime,data=ordered,noauto_da_alloc,discard,ro,noexec,nodev,nosuid,context=system_u:object_r:adsprpcd_t:s0 -t ext4 /dev/disk/by-partlabel/dsp${SLOT_SUFFIX} /dsp
 
 [Install]
 WantedBy=local-fs.target
