meta-qti-bsp: Enable verity on QCS605
This change will enable verity on QCS605.

Change-Id: I5bd5eaafba4e49e27ae9a04d5bf8a4193ad1a9c1
Signed-off-by: Sachin Grover <sgrover@codeaurora.org>

--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -38,6 +38,9 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
+#Enable verity feature
+DISTRO_FEATURES += "dm-verity"
+
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
 
