--- a/recipes-products/images/qcs40x/qcs40x-fsconfig.conf
+++ b/recipes-products/images/qcs40x/qcs40x-fsconfig.conf
@@ -6,3 +6,4 @@ usr/bin/getslotsuffix 0 1000 0754
 usr/bin/sensors.qti 3011 0 0744 capabilities=0x400
 etc/initscripts/logd 1036 1036 0750
 etc/initscripts/qseecomd 1000 1000 0750
+data/audio 0 0 0666
