Append audio-dlkm to distro feature list
Change-Id: I35539ce8ec2ef8c554f6e8789aa4576ad1ee071f
Signed-off-by: Md Mansoor Ahmed <mansoor@codeaurora.org>

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -33,6 +33,9 @@ TARGET_VENDOR_virtclass-multilib-lib64="-oe"
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
