Sdmsteppe: Define SOC_FAMILY for sdmsteppe.
Change-Id: If82fd0806e7654f34d8752f92603df5806aab9b2

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -7,6 +7,8 @@ require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic32.conf
 # Pull in security flags
 require ${COREBASE}/meta-qti-bsp/conf/distro/include/security_flags.inc
 
+SOC_FAMILY = "sdm670"
+
 BASEMACHINE = "sdmsteppe"
 
 DEFAULTTUNE = "armv7ahf-neon"
