--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -25,6 +25,7 @@ IMAGE_FSTYPES += "ubi"
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
 DISTRO_FEATURES_append = " persist-volume"
+DISTRO_FEATURES_append = " nand-squashfs"
 DEFAULTTUNE = "armv7ahf-neon"
 MKUBIFS_PERSIST_ARGS = "-m 4096 -e 253952 -c 2146 -F"
 RECOVERY_IMAGE = "0"
