--- a/recipes-core/systemd/systemd/sysctl-core.conf
+++ b/recipes-core/systemd/systemd/sysctl-core.conf
@@ -1,3 +1,3 @@
-kernel.core_pattern = /var/tmp/core.%e.%p.%s.%t
-kernel.core_uses_pid = 1
+kernel.core_pattern = /var/tmp/core.%e
+kernel.core_uses_pid = 0
 fs.suid_dumaple = 2
