meta-qti-bsp: Enable verity on SOM1-QCS405
Change-Id: I53df320351da9b1247f86f2df5c029c03aa0c90e
Signed-off-by: Hanumantha Reddy Naradla <hnaradla@codeaurora.org>

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -19,6 +19,9 @@ DISTRO_FEATURES_append = " audio-dlkm"
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
+#Enable verity feature
+DISTRO_FEATURES += "dm-verity"
+
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ext4"
 RECOVERY_IMAGE = "0"
