chrony: Allow NTP client access from local network.
Enabling the configuration option to chrony daemon allowing
NTP client access from Local Network so that chrony can sync
the system time with Network Time.

Change-Id: Ie05006520e27a6bb7edfc4d45ff5323053fb2e05

--- a/recipes-connectivity/chrony/chrony/chrony.conf
+++ b/recipes-connectivity/chrony/chrony/chrony.conf
@@ -29,7 +29,7 @@ driftfile /var/lib/chrony/drift
 rtcsync
 
 # Allow NTP client access from local network.
-#allow 192.168/16
+allow 192.168/16
 
 # Serve time even if not synchronized to any NTP server.
 #local stratum 10
