sdmsteppe: Disable unsupported pkgs
Change-Id: I129ec0b9e9630db1d3d5bfc655147187082aedf0

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -32,8 +32,8 @@ DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
 TARGET_VENDOR_virtclass-multilib-lib64="-oe"
 
 # Enable selinux
-DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "enforcing"
+# DISTRO_FEATURES_append = " selinux"
+# DEFAULT_ENFORCING = "enforcing"
 
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
