--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -45,5 +45,5 @@ PREFERRED_PROVIDER_virtual/egl      = "adreno"
 QPERMISSIONS_ENABLE = "1"
 
 QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
-QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
+QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop"
 QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
