--- a/conf/machine/qcs605-64.conf
+++ b/conf/machine/qcs605-64.conf
@@ -63,5 +63,5 @@ TARGET_VENDOR_virtclass-multilib-lib32="-oe"
 QPERMISSIONS_ENABLE = "1"
 
 QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
-QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
+QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop"
 QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
