sdmsteppe: Set GCCVERSION to 7.3
Change-Id: I9c59a9bb34bc73d4a15900d11f53e07c989a12ef

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -31,6 +31,9 @@ MULTILIBS = "multilib:lib64"
 DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
 TARGET_VENDOR_virtclass-multilib-lib64="-oe"
 
+# Thud has GCC 8.2 by default. This machine uses GCC 7.3 instead
+GCCVERSION = "7.3%"
+
 # Enable selinux
 # DISTRO_FEATURES_append = " selinux"
 # DEFAULT_ENFORCING = "enforcing"
@@ -53,7 +56,6 @@ QPERMISSIONS_ENABLE = "1"
 QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
 QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir}/initscripts/logd:logd:logd"
 QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
-
 
 # Userspace needs below given macro to support libion after kernel 4.12.
 TARGET_CFLAGS += " -DTARGET_ION_ABI_VERSION=2"
