Add leading and trailing spaces for TARGET_CFLAGS
Adding spaces is important as the value is appended to existing flags.

Change-Id: Ie9ae454cc9a91fb3bc2cdae7f7fd1557aab8ca7e

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -58,8 +58,8 @@ QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop ${sysconfdir
 QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
 
 # Userspace needs below given macro to support libion after kernel 4.12.
-TARGET_CFLAGS += " -DTARGET_ION_ABI_VERSION=2"
-TARGET_CXXFLAGS += " -DTARGET_ION_ABI_VERSION=2"
+TARGET_CFLAGS_append = " -DTARGET_ION_ABI_VERSION=2 "
+TARGET_CXXFLAGS_append = " -DTARGET_ION_ABI_VERSION=2 "
 
 PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
