sdxprairie: Move selinux to enforcing mode
Change-Id: I156430b23dce5894d34f0ce95dceb83beca85626

--- a/conf/machine/sdxprairie.conf
+++ b/conf/machine/sdxprairie.conf
@@ -21,4 +21,4 @@ DISTRO_FEATURES += "audiodlkm audio-dlkm"
 
 DISTRO_FEATURES_append += " selinux"
 DISTRO_FEATURES_FILTER_NATIVE += " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
