sdxpoorwills-auto: Add machine specific DISTROOVERRIDES and KERNEL_CONFIG
Change-Id: I3ac90a50f649fb95d52386977f512abaec4fc52d

--- a/conf/distro/auto.conf
+++ b/conf/distro/auto.conf
@@ -3,11 +3,11 @@ BASEDISTRO ?= "mdm"
 require conf/distro/mdm.conf
 
 DISTRO_NAME = "auto"
-DISTROOVERRIDES =. "auto:"
+DISTROOVERRIDES =. "${MACHINE}-auto:"
 
 PRODUCT = "auto"
 
-KERNEL_CONFIG = "${@['sdxpoorwills-auto-perf_defconfig', 'sdxpoorwills-auto_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+KERNEL_CONFIG = "${@['${MACHINE}-auto-perf_defconfig', '${MACHINE}-auto_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
 DISTRO_FEATURES += " selinux"
 DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
