conf: qcs605-32: debug image to include symbols in packages
When packages have debug information the image size increases,
but, provides much detailed on target debug experience:
 * with gdb: symbol information, line number etc.
 * backtraces: applications using backtrace, show informative
   backtraces with symbol names resolved in the backtrace
 * core-dump: generated is usable as it has more detailed
   symbol information
 * The memory leak analysis tool generates reports with function names
   where leak is found (earlier only address were logged)

Change-Id: I3cbf51e5955eb0559356989937331da4cb63c4c1

--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -2,6 +2,7 @@
 #@NAME: QCS605-32
 #@DESCRIPTION: Machine configuration for QTI QCS605 32bit
 
+require conf/distro/include/debug_flags.inc
 require conf/machine/include/qcs605.inc
 
 DEFAULTTUNE = "armv7ahf-neon"
