meta-qti-bsp: Disable rpmb and ssd listener
Disable rpmb and ssd listener support on nightfury,
a NAND based target that does not support both.

Change-Id: I2f1610ef364ad92d1245062ff5a5434b2e8ae6d2

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -22,6 +22,12 @@ PERSIST_VOLUME_SIZE ?= "6MiB"
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ubi"
 
+#Disable ssd listener
+DISTRO_FEATURES_append = " no-ssd-listener-support"
+
+#Disable rpmb listener
+DISTRO_FEATURES_append = " no-rpmb-listener-support"
+
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
 DISTRO_FEATURES_append = " persist-volume"
