meta-qti-bsp: qcs403-som2: Mount persist as raw volume.
Change-Id: I6554bd4198f698cf29be6bc88ba917b8b09b236d

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -39,6 +39,8 @@ PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
 
 DISTRO_FEATURES += "ab-boot-support"
+#Enable persist image/volume.
+DISTRO_FEATURES += "persist-image"
 
 # Flag to Enable QPermissions
 QPERMISSIONS_ENABLE = "1"
