meta-qti-bsp: Adding sdk support for sdxprairie
Change-Id: I7fecc7ecff26838ee73feeda213fb13002f9ae25

--- a/conf/distro/mdm.conf
+++ b/conf/distro/mdm.conf
@@ -4,6 +4,7 @@
 #@DESCRIPTION: QTI Linux Distribution for MDM targets (glibc based)
 #############################################################################
 require conf/distro/include/base.inc
+require conf/distro/include/yocto-uninative.inc
 
 # DISTRO CONFIGURATION
 DISTRO_NAME = "mdm"
