meta-qti-bsp: conf: allow audio user for diag,system access
- Diag group to access /dev/diag
- System group to access /dev/ion

Change-Id: Ic8ae20172a025ec564781ad16288375a5d9c959d

--- a/conf/distro/qpermissions.conf
+++ b/conf/distro/qpermissions.conf
@@ -7,7 +7,7 @@ USERADD_PARAM_${PN} ?= 	" \
 			-G leprop -u 1002 -U bluetooth; \
 			-u 1003 -U graphics; \
 			-u 1004 -g input input; \
-			-u 1005 -g audio audio; \
+			-G diag,system -u 1005 -g audio audio; \
 			-G inet,system,leprop -u 1006 -U camera; \
 			-u 1010 -U wifi; \
 			-u 1013 -U media; \
