qcs605: Enable serial console in perf builds
Change-Id: I045e13063a5acc2de92d043441914e462561396e

--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -20,10 +20,10 @@ KERNEL_CMD_PARAMS = "console=ttyMSM0,115200n8 earlycon=msm_geni_serial,0xA84000 
 KERNEL_CMD_PARAMS_append = " fsck.mode=force fsck.repair=yes "
 
 # Remove console parameters and supress systemd logs for non-debug builds.
-KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200n8', '', d)}"
-KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'earlycon=msm_geni_serial,0xA84000', '', d)}"
-KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'androidboot.console=ttyMSM0', '', d)}"
-KERNEL_CMD_PARAMS_append = "${@bb.utils.contains_any('VARIANT', 'perf user', ' quiet systemd.log_target=null', '', d)}"
+# KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200n8', '', d)}"
+# KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'earlycon=msm_geni_serial,0xA84000', '', d)}"
+# KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'androidboot.console=ttyMSM0', '', d)}"
+# KERNEL_CMD_PARAMS_append = "${@bb.utils.contains_any('VARIANT', 'perf user', ' quiet systemd.log_target=null', '', d)}
 
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
