--- a/recipes-bsp/startup-scripts/files/find_partitions.service
+++ b/recipes-bsp/startup-scripts/files/find_partitions.service
@@ -1,4 +1,4 @@
-# Copyright (c) 2017, The Linux Foundation. All rights reserved.
+# Copyright (c) 2017, 2019 The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are
@@ -33,6 +33,7 @@ DefaultDependencies=no
 
 [Service]
 Restart=no
+Type=oneshot
 RemainAfterExit=yes
 ExecStart=/etc/initscripts/find_partitions.sh start
 
