conf: qcs40x: set higher image size for debug variant
The higher image size in case of debug build is to accomodate for
size increase accross libraries and binaries, when built with options
like '-g' etc.

Change-Id: I7f38dc636c39803c5f1631d85245e29bca319542

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -5,6 +5,8 @@ require conf/machine/include/qcs40x.inc
 # NAND TARGET TO SUPPORT 32-bit kernel
 DISTRO = "qsap"
 DISTRO_FEATURES += "nand-boot"
+DISTRO_FEATURES_NATIVE_append = " nand-boot "
+
 PAGE_SIZE ?= '4096'
 USR_IMAGE_BASENAME       = "${BASEMACHINE}-usrfs"
 OUTPUT_FILE_FINAL_UBI    = "${DEPLOY_DIR_IMAGE}/${BASEMACHINE}-sysfs.ubi"
