--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -1,15 +1,16 @@
 #@TYPE: Machine
 #@NAME: SOM1-QCS405
 #@DESCRIPTION: Machine configuration for QTI SOM1-QCS405
+require conf/distro/include/debug_flags.inc
 require conf/machine/include/qcs40x.inc
 # EMMC TARGET TO SUPPORT 64-bit kernel
 DISTRO = "qsap"
 DEFAULTTUNE = "aarch64"
 
 # Sizes for EXT4 (in bytes)
-SYSTEM_SIZE_EXT4 ?= "681574400"
+SYSTEM_SIZE_EXT4 ?= "${@bb.utils.contains('DEBUG_BUILD', '1', '5368709120', '681574400', d)}"
 SYSTEMRW_SIZE_EXT4 ?= "8388608"
-USERDATA_SIZE_EXT4 ?= "2000000000"
+USERDATA_SIZE_EXT4 ?= "${@bb.utils.contains('DEBUG_BUILD', '1', '100000000', '2000000000', d)}"
 CACHE_SIZE_EXT4 ?= "80000000"
 
 # enable audio as a loadable kernel module
@@ -38,7 +39,11 @@ PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
 
+# Set ab-boot-support feature for native tools as well,
+# as some native tools have workflow chnages for AB builds.
 DISTRO_FEATURES += "ab-boot-support"
+DISTRO_FEATURES_NATIVE_append = " ab-boot-support "
+
 #Enable persist image/volume.
 DISTRO_FEATURES += "persist-image"
 
