meta-qti-bsp: Resolve build warning. Set LAYERSERIES_COMPAT_msm
Change-Id: I11704d283ec747123a2e8cbe6f4e41dd5998c0bf

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,7 +3,7 @@ BBPATH .= ":${LAYERDIR}"
 BBFILE_COLLECTIONS += "msm"
 BBFILE_PRIORITY_msm = "10"
 BBFILE_PATTERN_msm := "^${LAYERDIR}/"
-LAYERSERIES_COMPAT_bsp = "thud"
+LAYERSERIES_COMPAT_msm = "${LAYERSERIES_COMPAT_core}"
 
 # Tools needed on the build host for usage within build tasks by recipes of this layer.
 HOSTTOOLS_NONFATAL += "xgettext msgmerge msgfmt gmsgfmt java zip"
