conf: disable incremental build solution for qcs405 and qcs605
Change-Id: I1563a4b2f3f0f34b93601b375e651caa9d4195fa

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -2,6 +2,11 @@
 #@NAME: SOM1-QCS405
 #@DESCRIPTION: Machine configuration for QTI SOM1-QCS405
 require conf/machine/include/qcs40x.inc
+
+# The incremental build solution causes issues for a few recipes
+# hence temporarily disabled
+BB_SIGNATURE_HANDLER = "noop"
+
 # EMMC TARGET TO SUPPORT 64-bit kernel
 DISTRO = "qsap"
 DEFAULTTUNE = "aarch64"
