--- a/conf/machine/qcs605-64.conf
+++ b/conf/machine/qcs605-64.conf
@@ -4,6 +4,10 @@
 
 require conf/machine/include/qcs605.inc
 
+# The incremental build solution causes issues for a few recipes
+# hence temporarily disabled
+BB_SIGNATURE_HANDLER = "noop"
+
 KERNEL_IMAGETYPE = "Image.gz-dtb"
 
 KERNEL_DTS_NAME = "qcs605"
