conf: sdmsteppe: debug image to include symbols in packages
This change is to enable more debug info to the packages.

Change-Id: I57f97c66d88abe1901ec2981e84ad47cc3130a87

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -2,6 +2,7 @@
 #@NAME: sdmsteppe
 #@DESCRIPTION: Machine configuration for QTI sdmsteppe 32bit
 
+require  conf/distro/include/debug_flags.inc
 require  ${COREBASE}/meta-qti-bsp/conf/machine/sdm-generic32.conf
 
 # Pull in security flags
