meta-qti-bsp: sdxpoorwills-auto: changes for Thud upgrade
Remove wireless-tools installation, Wireless-tools
have been obsolete and superseded by iw.

Disable selinux for now.

Change-Id: I9ac16ecae4b0227092b3c65adb3adf69607dec99

--- a/conf/distro/auto.conf
+++ b/conf/distro/auto.conf
@@ -9,9 +9,9 @@ PRODUCT = "auto"
 
 KERNEL_CONFIG = "${@['${MACHINE}-auto-perf_defconfig', '${MACHINE}-auto_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
-DISTRO_FEATURES += " selinux"
-DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
-DEFAULT_ENFORCING = "enforcing"
+#DISTRO_FEATURES += " selinux"
+#DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
+#DEFAULT_ENFORCING = "enforcing"
 
 # Formats of root filesystem images.
 IMAGE_FSTYPES = "ubi"
