meta-qti-bsp: sdm845: add FDE feature for sdm845
Change-Id: I4b660e79cc04581205200417695a9cbc53ebc8a3

--- a/conf/machine/sdm845.conf
+++ b/conf/machine/sdm845.conf
@@ -65,3 +65,6 @@ QPERMISSIONS_ENABLE = "1"
 QPERM_FILE_pn-start-script-ab-slot-util = "${bindir}/getslotsuffix:root:system"
 QPERM_FILE_pn-system-core = "${sysconfdir}/build.prop:leprop:leprop"
 QPERM_FILE_pn-system-prop = "/build.prop:leprop:leprop"
+
+# enable FDE
+DISTRO_FEATURES_append = " full-disk-encryption"
