sdmsteppe : Add libdrm perferred version.
Change-Id: Ideaeb4f0aeef80fa3795648269d1a22f54644ce3

--- a/conf/machine/sdmsteppe.conf
+++ b/conf/machine/sdmsteppe.conf
@@ -15,6 +15,7 @@ DEFAULTTUNE = "armv7ahf-neon"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-msm"
 PREFERRED_VERSION_linux-msm = "4.14"
+PREFERRED_VERSION_libdrm = "2.4.83"
 
 # Kernel to build for a different arch than default tune
 TARGET_KERNEL_ARCH = "aarch64"
