meta-qti-bsp: sdxpoorwills-auto: Increase cache volume size
Increase cache volume size required for modem incremental
OTA update

Change-Id: I45b4b6841fd12f42de60156185368d7a1b0ff49e

--- a/conf/distro/auto.conf
+++ b/conf/distro/auto.conf
@@ -14,5 +14,11 @@ DISTRO_FEATURES += " selinux"
 DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
+#Volume sizes
+SYSTEM_VOLUME_SIZE = "90MiB"
+CACHE_VOLUME_SIZE = "100MiB"
+SYSTEMRW_VOLUME_SIZE = "6MiB"
+PERSIST_VOLUME_SIZE = "6MiB"
+
 # Formats of root filesystem images.
 IMAGE_FSTYPES = "ubi"
