meta-qti-bsp: Enable mounting of persist volume for qcs403-som2.
Change-Id: I8682b121bf68a8427d2239b64fd2dc3c7b6db6b8

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -17,7 +17,7 @@ UBINIZE_ARGS ?= "-m 4096 -p 256KiB -s 4096"
 #MKUBIFS Args
 MKUBIFS_ARGS ?= "-m 4096 -e 253952 -c 2146 -F"
 
-MACHINE_MNT_POINTS = "/firmware /cache /dsp /bt_firmware"
+MACHINE_MNT_POINTS = "/firmware /persist /cache /dsp /bt_firmware"
 
 #Volume sizes
 SYSTEM_VOLUME_SIZE ?= "150MiB"
