--- a/conf/distro/qpermissions.conf
+++ b/conf/distro/qpermissions.conf
@@ -23,6 +23,7 @@ USERADD_PARAM_${PN} ?= 	" \
 			"
 
 GROUPADD_PARAM_${PN} ?=	" \
+                        -g 2901 kmsg; \
 			-g 3004 net_raw; \
 			-g 3005 net_admin; \
 			-g 3009 readproc; \
