qcs405-som1: Disable selinux and dm-verity
Temporarily disable selinux and dm-verity distro features to
facilitate Thud bringup.

Also removed "wireless-tools" from qcs40x image installations.

Change-Id: I2b833ecdb1d8bb11448b00226b654357b0107e95

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -24,11 +24,11 @@ CACHE_SIZE_EXT4 ?= "80000000"
 DISTRO_FEATURES_append = " audio-dlkm"
 
 #enable selinux
-DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "enforcing"
+# DISTRO_FEATURES_append = " selinux"
+# DEFAULT_ENFORCING = "enforcing"
 
 #Enable verity feature
-DISTRO_FEATURES += "dm-verity"
+# DISTRO_FEATURES += "dm-verity"
 
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ext4"
