meta-qti-bsp: Use mounts for filesystem mounting
Harmonize mount usage across all chipsets. Using
mount over find_partition provides more granularity
for prioritizing different mount points.

Change-Id: I411bd2bedbf8645ceb714b8f9b6571bbe9e317e5

--- a/recipes-core/systemd/systemd-machine-units/firmware-ubi-mount.service
+++ b/recipes-core/systemd/systemd-machine-units/firmware-ubi-mount.service
@@ -31,8 +31,8 @@ SourcePath=/etc/initscripts/firmware-ubi-mount.sh
 DefaultDependencies=no
 
 [Service]
-Restart=no
-ExecStart=/etc/initscripts/firmware-ubi-mount.sh start
+Type=oneshot
+ExecStart=/etc/initscripts/firmware-ubi-mount.sh
 
 [Install]
 WantedBy=local-fs.target
