--- a/conf/machine/sdxprairie.conf
+++ b/conf/machine/sdxprairie.conf
@@ -22,3 +22,4 @@ DISTRO_FEATURES += "audiodlkm audio-dlkm"
 DISTRO_FEATURES_append += " selinux"
 DISTRO_FEATURES_FILTER_NATIVE += " selinux"
 DEFAULT_ENFORCING = "enforcing"
+MACHINE_MNT_POINTS = "/firmware /persist /cache"
