Busybox: Disable inetd applet
There is no RPC support in glibc v2.14 and above required for inetd
to work. License of tirpc library is not friendly to link against.
Users of busybox inetd are recommended to switch to xinetd.

Change-Id: I574e9a995b6eba6e70adf239d4629f481c13cbb1

--- a/recipes-core/busybox/files/base.cfg
+++ b/recipes-core/busybox/files/base.cfg
@@ -255,7 +255,7 @@ CONFIG_HUSH_TICK=y
 CONFIG_IFENSLAVE=y
 CONFIG_IFPLUGD=y
 CONFIG_INCLUDE_SUSv2=y
-CONFIG_INETD=y
+# CONFIG_INETD is not set
 # CONFIG_INIT is not set
 CONFIG_INIT_TERMINAL_TYPE=""
 CONFIG_INSTALL=y
