meta-qti-bsp: Adapt to Thud upgrade build environment
Change-Id: Id892895f510e6901ace84d017698b92f1260c37d

CRs-Fixed: 2431012

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -45,6 +45,7 @@ TARGET_VENDOR_virtclass-multilib-lib32="-oe"
 PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
+PREFERRED_VERSION_libdrm = "2.4.83"
 
 # Set ab-boot-support feature for native tools as well,
 # as some native tools have workflow chnages for AB builds.
