--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -51,6 +51,7 @@ DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
 PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
+PREFERRED_VERSION_libdrm = "2.4.83"
 
 # Flag to Enable QPermissions
 QPERMISSIONS_ENABLE = "1"
