meta-qti-bsp: Set low Nice number for KPI critical service.
Change-Id: I2ae06340c95344bc6127224429a26d3fd0b48029

--- a/recipes-core/systemd/systemd-machine-units/firmware-mount.service
+++ b/recipes-core/systemd/systemd-machine-units/firmware-mount.service
@@ -33,6 +33,7 @@ Type=oneshot
 RemainAfterExit=yes
 PassEnvironment="SLOT_SUFFIX"
 ExecStart=/bin/mount -o noexec,nodev,ro,context=system_u:object_r:firmware_t:s0 -t vfat /dev/disk/by-partlabel/modem${SLOT_SUFFIX} /firmware
+Nice=-20
 
 [Install]
 WantedBy=local-fs.target
