--- a/meta-qti-extra/conf/layer.conf
+++ b/meta-qti-extra/conf/layer.conf
@@ -1,6 +1,6 @@
 BBFILES += "${LAYERDIR}/recipes/*/*.bb ${LAYERDIR}/recipes/*/*.bbappend ${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 BBPATH .= ":${LAYERDIR}"
-BBFILE_COLLECTIONS += "qti-advance"
-BBFILE_PRIORITY_qti-advance = "12"
-BBFILE_PATTERN_qti-advance := "^${LAYERDIR}/"
+BBFILE_COLLECTIONS += "qti-extra"
+BBFILE_PRIORITY_qti-extra = "12"
+BBFILE_PATTERN_qti-extra := "^${LAYERDIR}/"
 
