Add CAF_GIT to download search list(site.conf)
Change-Id: I9a4d2a6b456a0e99fdd251c6739f5129e1f06e84
Signed-off-by: Yingzhong.Zha <yzha@codeaurora.org>

--- a/meta-qti-base/conf/site.conf
+++ b/meta-qti-base/conf/site.conf
@@ -40,9 +40,12 @@ YP_MIRROR  = "http://downloads.yoctoproject.org/mirror/sources/"
 CAF_MIRROR = "https://codeaurora.org/mirrored_source/quic/le"
 CAF_GIT    = "git://codeaurora.org/quic/le"
 
+PREMIRRORS_append = "git?$://.*/.* ${CAF_GIT}/\n"
+
 PREMIRRORS_append = "https?$://.*/.* ${CAF_MIRROR}/\n"
 PREMIRRORS_append = "svn$://.*/.* ${CAF_MIRROR}/\n"
 PREMIRRORS_append = "git?$://.*/.* ${CAF_MIRROR}/\n"
 PREMIRRORS_append = "ftps?$://.*/.* ${CAF_MIRROR}/\n"
+
 PREMIRRORS_append = "svn$://.*/.* ${YP_MIRROR}/\n"
 PREMIRRORS_append = "git?$://.*/.* ${YP_MIRROR}/\n"
