--- a/meta-qti-agl/conf/distro/automotive.conf
+++ b/meta-qti-agl/conf/distro/automotive.conf
@@ -1,8 +1,20 @@
-require ${COREBASE}/meta-agl/meta-agl-distro/conf/distro/poky-agl.conf
-
-INHERIT_remove = "uninative"
-INITRAMFS_FSTYPES = "cpio.gz"
-USER_CLASSES = "buildname image-mklibs"
-
+require conf/distro/poky-agl.conf
+require conf/include/base-agl.inc
+require conf/include/agl-appfw-smack.inc
+require conf/include/agl-pulseaudio.inc
 require ${QTI_METAPATH_BASE}/conf/distro/automotive.conf
 
+# Enable agl hmi framework
+DISTRO_FEATURES_append = " agl-hmi-framework"
+
+# reset ROOT_HOME in conf/include/agl-appfw-smack.inc
+ROOT_HOME = "/home/root"
+
+# Add buildname to fix error
+USER_CLASSES = "buildstats buildname image-mklibs"
+
+# Mask unnecessary recipes to fix build error
+BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston_6.0.0.bbappend"
+BBMASK .= "|meta-agl/meta-agl-profile-core/recipes-test/freetype/freetype_2.9.1.bbappend"
+BBMASK .= "|meta-qti-bsp/meta-qti-base/recipes-audio/pulseaudio/pulseaudio_%.bbappend"
+BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston-init.bbappend"
