increase rootfs size
other refine.
1 fix TMPDIR error

Change-Id: I1f7c532e2d61e9fce10890fd62afee5bc0d15260
Signed-off-by: Xubao Jiang <xubaoj@codeaurora.org>

--- a/meta-qti-agl/conf/distro/automotive.conf
+++ b/meta-qti-agl/conf/distro/automotive.conf
@@ -13,6 +13,10 @@ ROOT_HOME = "/home/root"
 # Add buildname to fix error
 USER_CLASSES = "buildstats buildname image-mklibs"
 
+# TCLIBCAPPEND is set to empty in conf/distro/poky.conf, so $TMPDIR is $TOPDIR/tmp
+# Reset the value as meta/conf/distro/defaultsetup.conf
+TCLIBCAPPEND = "-${TCLIBC}"
+
 # Mask unnecessary recipes to fix build error
 BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston_6.0.0.bbappend"
 BBMASK .= "|meta-agl/meta-agl-profile-core/recipes-test/freetype/freetype_2.9.1.bbappend"
