Change rootfs size of qtiquingvm
Since the system partition size is 1GB, the rootfs size should not be
greater than 1GB.

Change-Id: I4a101040be3e3b22e5b4d73a2e2f6f167a84ad04
Signed-off-by: Zhiqiang Tu <ztu@codeaurora.org>

--- a/meta-qti-base/conf/machine/qtiquingvm.conf
+++ b/meta-qti-base/conf/machine/qtiquingvm.conf
@@ -18,6 +18,9 @@ SYSTEMRW_SIZE_EXT4 ?= "8388608"
 USERDATA_SIZE_EXT4 ?= "2000000000"
 CACHE_SIZE_EXT4 ?= "80000000"
 
+# Rootfs size
+IMAGE_ROOTFS_SIZE = "1048576"
+
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ext4"
 RECOVERY_IMAGE = "0"
